# zongse2

./: .gitignore  README.md  pyproject.toml
src/browndust2_manager/: __init__.py  app.py
src/browndust2_manager/controllers/: main_controller.py
src/browndust2_manager/models/: __init__.py  account.py  account_list_model.py  emulator.py  emulator_config_model.py  task.py
src/browndust2_manager/repositories/: __init__.py  account_repository.py
src/browndust2_manager/services/: __init__.py  account_scanner.py  account_service.py  backup_service.py  emulator_manager.py  emulator_service.py  folder_opener.py  log_service.py  recovery_engine.py  restore_service.py  root_service.py  settings_service.py  task_service.py  verify_service.py  xml_parser_service.py  xml_repair_service.py
src/browndust2_manager/views/: main_window.py
tests/: test_account_repository.py  test_account_scanner.py  test_backup_verify_emulator.py  test_recovery_engine.py  test_restore_service.py  test_root_service.py  test_xml_repair_service.py
