[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BrownDust2Manager"
version = "0.1.0"
description = "PySide6 Windows account manager for BrownDust2 emulator profiles."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
browndust2-manager = "browndust2_manager.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
